  under the caret
- View->Folding submenu is now a top-level Folding menu. A few commands
  have been added:
  - Add Explicit Fold (C+e a): surrounds the selection with explicit
    fold markers ({{{ and }}})
  - Go to Previous/Next Fold (A+UP, A+DOWN): self-explanatory. Go to
    Previous/Next Marker, which were formely bound to A+UP/DOWN, are now
    bound to C+e COMMA and C+e PERIOD.
  - Go to Parent Fold (C+e u): moves caret to fold with a higher level
    than the one containing the caret
  - Narrow to Fold (C+e n n): equivalent to invoking 'Select Fold', then
    'Narrow to Selection'
  - Narrow to Selection (C+e n s): this command is the same as before,
    but has a new shortcut

+ Enhancements

- C+LEFT/C+RIGHT are now more intelligent. Tell me if you like the new
  behavior.
- If there are more buttons in a docking area than can fit, a popup menu
  button is shown; clicking it shows a popup listing all dockables in
  that area
- Added option to disable file system browser's tool bar
- I/O errors are now batched into a single dialog box
- New, smaller icons in file system browser (Dirk Moebius)
- New jEdit window icon (Phillip Richdale)
- First item in File->Current Directory menu (the directory path itself)
  is no longer a grayed out label; you can invoke it to view the
  directory in the file system browser
- First item in 'Paste Previous' dialog pre-selected when dialog shown
- Focus is returned to file list in 'Close All' dialog box after one of
  the buttons are clicked
- Recent Directories menu, Browse System/User Macros commands, and other
  commands that open directories in the file system browser now work a
  little better
- The list of open files is now saved by the autosave task
- The 'Shift Indent Right' command now ignores blank lines
- Smoother incremental search
- When HOME is pressed while there is a selection, the caret is moved to
  the beginning of the first selected line. END moves the caret to the
  end of the last selected line.